--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,7 +1,7 @@
 <section class="wrapper style1 align-center">
         <div class="inner medium">
             <h2>Get in touch</h2>
-            <form method="post" action="#">
+            <form method="post" action="https://www.getform.org/f/{{ site.getform_token }}">
                 <div class="field half first">
                     <label for="name">Name</label>
                     <input type="text" name="name" id="name" value="" />
