--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,10 +1,12 @@
 <section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
     <div class="content">
-        <h1>Story</h1>
-        <p class="major">A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p>
-        <ul class="actions vertical">
+        <img class="logo_image" src="images/logo.jpg"/>
+        <h1>Woodslab Designs</h1>
+        <p class="major">Welcome to Woodslab Designs! Where you can find my gallery of hand turned bowls and furniture from locally harvested trees milled in my own back yard.</p>
+        <!-- <ul class="actions vertical">
             <li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
-        </ul>
+        </ul> -->
+        
     </div>
     <div class="image">
         <img src="images/banner.jpg" alt="" />
