--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2447,6 +2447,14 @@
 	}
 
 /* Image */
+	@media screen and (orientation: portrait) {
+	
+					.logo_image {
+						margin:0 auto;
+						max-width:35%;
+					}
+	
+				}
 
 	.image {
 		border: 0;
@@ -3263,7 +3271,7 @@
 			-moz-align-self: center;
 			-webkit-align-self: center;
 			-ms-align-self: center;
-			align-self: center;
+			align-self: auto;
 			-moz-flex-grow: 1;
 			-webkit-flex-grow: 1;
 			-ms-flex-grow: 1;
