--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,8 +1,8 @@
 <section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
     <div class="content">
         <img class="logo_image" src="images/logo.jpg"/>
-        <h1>Woodslab Designs</h1>
-        <p class="major">Welcome to Woodslab Designs! Where you can find my gallery of hand turned bowls and furniture from locally harvested trees milled in my own back yard.</p>
+        <h1>Josh Lesch</h1>
+        <p class="major">Welcome to Woodslab Designs! Where you can find my gallery of hand turned bowls and furniture from locally reclaimed trees milled in my own back yard.</p>
         <!-- <ul class="actions vertical">
             <li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
         </ul> -->
