--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -2,7 +2,7 @@
     <div class="content">
         <img class="logo_image" src="images/logo.jpg"/>
         <h1>Josh Lesch</h1>
-        <p class="major">Welcome to Woodslab Designs! Where you can find my gallery of hand turned bowls and furniture from locally reclaimed trees milled in my own back yard.</p>
+        <p class="major">Welcome to my gallery of hand turned bowls and furniture from locally reclaimed trees milled in my own back yard.</p>
         <!-- <ul class="actions vertical">
             <li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
         </ul> -->
