--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -3,9 +3,9 @@
         <img class="logo_image" src="images/logo.jpg"/>
         <h1>Josh Lesch</h1>
         <p class="major">Welcome to my gallery of hand turned bowls and furniture from locally reclaimed trees milled in my own back yard.</p>
-        <!-- <ul class="actions vertical">
-            <li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
-        </ul> -->
+        <ul class="actions vertical">
+            <li><a href="#contact" class="button big wide smooth-scroll-middle">Contact</a></li>
+        </ul>
         
     </div>
     <div class="image">
