--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,4 +1,4 @@
-<section class="wrapper style1 align-center">
+<section class="wrapper style1 align-center" id="contact">
         <div class="inner medium">
             <h2>Get in touch</h2>
             <form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/{{ site.gform_token }}/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
