--- a/_includes/spotlight.html
+++ b/_includes/spotlight.html
@@ -1,10 +1,10 @@
 <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
     <div class="content">
-        <h2>Magna etiam feugiat</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-        <ul class="actions vertical">
+        <h2>Slabs and Turning Blanks</h2>
+        <p>All of my material for furniture and turning blanks is sourced from locally harvested storm damaged trees or urban logging. Once milled and dried which can take anywhere from 6 to 12 months, I look to see what I can make out of the material. This results in more organic pieces that tell a story which is one of the best parts of making heirloom pieces of furniture or bowls.</p>
+        <!-- <ul class="actions vertical">
             <li><a href="#" class="button">Learn More</a></li>
-        </ul>
+        </ul> -->
     </div>
     <div class="image">
         <img src="images/spotlight01.jpg" alt="" />
@@ -13,11 +13,11 @@
 
 <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
     <div class="content">
-        <h2>Tempus adipiscing</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-        <ul class="actions vertical">
+        <h2>Wood Turning</h2>
+        <p>Wood turning is my favorite form of woodworking. From using a chainsaw to cut the blanks, to putting the final finish on the project, there's nothing more rewarding than watching someone fall in love with the piece when they see it for the first time.</p>
+        <!-- <ul class="actions vertical">
             <li><a href="#" class="button">Learn More</a></li>
-        </ul>
+        </ul> -->
     </div>
     <div class="image">
         <img src="images/spotlight02.jpg" alt="" />
@@ -26,11 +26,11 @@
 
 <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
     <div class="content">
-        <h2>Pharetra etiam nulla</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-        <ul class="actions vertical">
+        <h2>Live Edge Furniture</h2>
+        <p>For me making furniture from live edge slabs is the ultimate way to show off the wood in its natural form. Being able to tell the story of me finding the tree, milling a slab, air drying the slab over the course of a year and making something that compliments the wood is why I build furniture.</p>
+        <!-- <ul class="actions vertical">
             <li><a href="#" class="button">Learn More</a></li>
-        </ul>
+        </ul> -->
     </div>
     <div class="image">
         <img src="images/spotlight03.jpg" alt="" />
