--- a/_includes/sliding_gallery.html
+++ b/_includes/sliding_gallery.html
@@ -1,7 +1,7 @@
 <section class="wrapper style1 align-center">
         <div class="inner">
             <h2>Available</h2>
-            <p>If you're interested in one of my available pieces, please contact me below.</p>
+            <p>If you're interested in one of my pieces, please contact me below.</p>
         </div>
 
         <!-- Gallery -->
