--- a/_includes/spotlight.html
+++ b/_includes/spotlight.html
@@ -1,7 +1,7 @@
 <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
     <div class="content">
         <h2>Slabs and Turning Blanks</h2>
-        <p>All of my material for furniture and turning blanks is sourced from locally harvested storm damaged trees or urban logging. Once milled and dried which can take anywhere from 6 to 12 months, I look to see what I can make out of the material. This results in more organic pieces that tell a story which is one of the best parts of making heirloom pieces of furniture or bowls.</p>
+        <p>All of my material is sourced from locally harvested storm damaged trees or saved from being firewood. Once milled and dried (which can take anywhere from 6 to 12 months), I look to see what I can make out of the material. I want my pieces to be organic and tell a story that you'll want to pass down through the generations.</p>
         <!-- <ul class="actions vertical">
             <li><a href="#" class="button">Learn More</a></li>
         </ul> -->
@@ -14,7 +14,7 @@
 <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
     <div class="content">
         <h2>Wood Turning</h2>
-        <p>Wood turning is my favorite form of woodworking. From using a chainsaw to cut the blanks, to putting the final finish on the project, there's nothing more rewarding than watching someone fall in love with the piece when they see it for the first time.</p>
+        <p>Turning is my favorite form of woodworking. From cutting the blanks with a chainsaw, to putting the final finish on the project, there's nothing more rewarding than bringing a piece to life and seeing somebody fail in love with it when they pick it up for the first time.</p>
         <!-- <ul class="actions vertical">
             <li><a href="#" class="button">Learn More</a></li>
         </ul> -->
@@ -27,7 +27,7 @@
 <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
     <div class="content">
         <h2>Live Edge Furniture</h2>
-        <p>For me making furniture from live edge slabs is the ultimate way to show off the wood in its natural form. Being able to tell the story of me finding the tree, milling a slab, air drying the slab over the course of a year and making something that compliments the wood is why I build furniture.</p>
+        <p>For me, making furniture from live edge slabs is the ultimate way to show off wood in its natural form. Telling the story of finding the tree, milling and air drying the slab over the course of a year, and ending up with something that compliments the wood is why I build furniture.</p>
         <!-- <ul class="actions vertical">
             <li><a href="#" class="button">Learn More</a></li>
         </ul> -->
