more text changes

--- a/_includes/spotlight.html
+++ b/_includes/spotlight.html
@@ -1,7 +1,7 @@
 <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
     <div class="content">
         <h2>Slabs and Turning Blanks</h2>
-        <p>All of my material is sourced from locally harvested storm damaged trees or saved from being firewood. Once milled and dried (which can take anywhere from 6 to 12 months), I look to see what I can make out of the material. I want my pieces to be organic and tell a story that you'll want to pass down through the generations.</p>
+        <p>All of my material is sourced from locally harvested storm damaged trees or is saved from being firewood. Once milled and dried (which can take anywhere from 6 to 12 months), I look to see what I can make out of the prepared stock. I want my pieces to be organic and tell a story so that you'll want to pass it down through the generations.</p>
         <!-- <ul class="actions vertical">
             <li><a href="#" class="button">Learn More</a></li>
         </ul> -->
@@ -14,7 +14,7 @@
 <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
     <div class="content">
         <h2>Wood Turning</h2>
-        <p>Turning is my favorite form of woodworking. From cutting the blanks with a chainsaw, to putting the final finish on the project, there's nothing more rewarding than bringing a piece to life and seeing somebody fail in love with it when they pick it up for the first time.</p>
+        <p>Turning is my favorite form of woodworking. Every step of the process is rewarding, from cutting the blank with a chainsaw, to putting the final finish on a project. But there is nothing better than seeing somebody fall in love when they pick it up for the first time.</p>
         <!-- <ul class="actions vertical">
             <li><a href="#" class="button">Learn More</a></li>
         </ul> -->
