--- a/_includes/spotlight.html
+++ b/_includes/spotlight.html
@@ -1,7 +1,7 @@
 <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
     <div class="content">
         <h2>Slabs and Turning Blanks</h2>
-        <p>All of my material is sourced from locally harvested storm damaged trees or is saved from being firewood. Once milled and dried (which can take anywhere from 6 to 12 months), I look to see what I can make out of the prepared stock. I want my pieces to be organic and tell a story so that you'll want to pass it down through the generations.</p>
+        <p>All of my material is either sourced from locally harvested storm damaged trees or saved from being firewood. Once milled and dried (which can take anywhere from 6 to 12 months), I look to see what I can make out of the prepared stock. I want my pieces to be organic and tell a story so that you'll want to pass it down through the generations.</p>
         <!-- <ul class="actions vertical">
             <li><a href="#" class="button">Learn More</a></li>
         </ul> -->
