--- a/_includes/sliding_gallery.html
+++ b/_includes/sliding_gallery.html
@@ -1,7 +1,7 @@
 <section class="wrapper style1 align-center">
         <div class="inner">
-            <h2>Available</h2>
-            <p>If you’re interested in one of my pieces, you can contact me by filling out the form at the bottom of the page.</p>
+            <h2>Completed Projects</h2>
+            <p>If you’re interested in one of my pieces or would like to commission something. You can contact me by filling out the form at the bottom of the page.</p>
         </div>
 
         <!-- Gallery -->
