--- a/_includes/spotlight.html
+++ b/_includes/spotlight.html
@@ -7,7 +7,7 @@
         </ul> -->
     </div>
     <div class="image">
-        <img src="images/spotlight01.jpg" alt="" />
+        <img src="images/stacked_blanks.jpg" alt="" />
     </div>
 </section>
 
