--- a/_includes/spotlight.html
+++ b/_includes/spotlight.html
@@ -20,7 +20,7 @@
         </ul> -->
     </div>
     <div class="image">
-        <img src="images/spotlight02.jpg" alt="" />
+        <img src="images/lathe_action.jpg" alt="" />
     </div>
 </section>
 
