--- a/_includes/spotlight.html
+++ b/_includes/spotlight.html
@@ -33,6 +33,6 @@
         </ul> -->
     </div>
     <div class="image">
-        <img src="images/spotlight03.jpg" alt="" />
+        <img src="images/live_edge.jpg" alt="" />
     </div>
 </section>
