--- a/_includes/sliding_gallery.html
+++ b/_includes/sliding_gallery.html
@@ -7,149 +7,76 @@
         <!-- Gallery -->
             <div class="gallery style2 medium lightbox onscroll-fade-in">
                 <article>
-                    <a href="images/gallery/fulls/01.jpg" class="image">
-                        <img src="images/gallery/thumbs/01.jpg" alt="" />
+                    <a href="images/gallery/fulls/DSC_0046.jpg" class="image">
+                        <img src="images/gallery/thumbs/DSC_0046.jpg" alt="" />
                     </a>
                     <div class="caption">
-                        <h3>Ipsum Dolor</h3>
-                        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions">
+                        <h3>Individual Popcorn Bowl</h3>
+                        <p>Small 5 x 3 figured hard Maple bowl (Unavailable)</p>
+                        <!-- <ul class="actions">
                             <li><span class="button small">Details</span></li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </article>
                 <article>
-                    <a href="images/gallery/fulls/02.jpg" class="image">
-                        <img src="images/gallery/thumbs/02.jpg" alt="" />
+                    <a href="images/gallery/fulls/DSC_0057.jpg" class="image">
+                        <img src="images/gallery/thumbs/DSC_0057.jpg" alt="" />
                     </a>
                     <div class="caption">
-                        <h3>Feugiat Lorem</h3>
-                        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions">
+                        <h3>Individual Popcorn Bowl</h3>
+                        <p>Small 6 x 2 figured hard Maple bowl (Unavailable)</p>
+                        <!-- <ul class="actions">
                             <li><span class="button small">Details</span></li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </article>
                 <article>
-                    <a href="images/gallery/fulls/03.jpg" class="image">
-                        <img src="images/gallery/thumbs/03.jpg" alt="" />
+                    <a href="images/gallery/fulls/DSC_0059.jpg" class="image">
+                        <img src="images/gallery/thumbs/DSC_0059.jpg" alt="" />
                     </a>
                     <div class="caption">
-                        <h3>Magna Amet</h3>
-                        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions">
+                        <h3>Salad Bowl</h3>
+                        <p>Medium 10 x 4 Walnut salad bowl</p>
+                        <!-- <ul class="actions">
                             <li><span class="button small">Details</span></li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </article>
                 <article>
-                    <a href="images/gallery/fulls/04.jpg" class="image">
-                        <img src="images/gallery/thumbs/04.jpg" alt="" />
+                    <a href="images/gallery/fulls/DSC_0072.jpg" class="image">
+                        <img src="images/gallery/thumbs/DSC_0072.jpg" alt="" />
                     </a>
                     <div class="caption">
-                        <h3>Sed Tempus</h3>
-                        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions">
+                        <h3>Salad Bowl</h3>
+                        <p>Medium 8 x 4 Spalted Silve Maple bowl</p>
+                        <!-- <ul class="actions">
                             <li><span class="button small">Details</span></li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </article>
                 <article>
-                    <a href="images/gallery/fulls/05.jpg" class="image">
-                        <img src="images/gallery/thumbs/05.jpg" alt="" />
+                    <a href="images/gallery/fulls/DSC_0080.jpg" class="image">
+                        <img src="images/gallery/thumbs/DSC_0080.jpg" alt="" />
                     </a>
                     <div class="caption">
-                        <h3>Ultrices Magna</h3>
-                        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions">
+                        <h3>Catch all bowl</h3>
+                        <p>Small 4 x 2 Walnut catch all bowl (Unavailable)</p>
+                        <!-- <ul class="actions">
                             <li><span class="button small">Details</span></li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </article>
                 <article>
-                    <a href="images/gallery/fulls/06.jpg" class="image">
-                        <img src="images/gallery/thumbs/06.jpg" alt="" />
+                    <a href="images/gallery/fulls/DSC_0093.jpg" class="image">
+                        <img src="images/gallery/thumbs/DSC_0093.jpg" alt="" />
                     </a>
                     <div class="caption">
-                        <h3>Sed Tempus</h3>
-                        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions">
+                        <h3>Platter</h3>
+                        <p>10 inch Spalted Silver Maple platter (Unavailable)</p>
+                        <!-- <ul class="actions">
                             <li><span class="button small">Details</span></li>
-                        </ul>
-                    </div>
-                </article>
-                <article>
-                    <a href="images/gallery/fulls/07.jpg" class="image">
-                        <img src="images/gallery/thumbs/07.jpg" alt="" />
-                    </a>
-                    <div class="caption">
-                        <h3>Ipsum Lorem</h3>
-                        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions">
-                            <li><span class="button small">Details</span></li>
-                        </ul>
-                    </div>
-                </article>
-                <article>
-                    <a href="images/gallery/fulls/08.jpg" class="image">
-                        <img src="images/gallery/thumbs/08.jpg" alt="" />
-                    </a>
-                    <div class="caption">
-                        <h3>Magna Risus</h3>
-                        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions">
-                            <li><span class="button small">Details</span></li>
-                        </ul>
-                    </div>
-                </article>
-                <article>
-                    <a href="images/gallery/fulls/09.jpg" class="image">
-                        <img src="images/gallery/thumbs/09.jpg" alt="" />
-                    </a>
-                    <div class="caption">
-                        <h3>Tempus Dolor</h3>
-                        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions">
-                            <li><span class="button small">Details</span></li>
-                        </ul>
-                    </div>
-                </article>
-                <article>
-                    <a href="images/gallery/fulls/10.jpg" class="image">
-                        <img src="images/gallery/thumbs/10.jpg" alt="" />
-                    </a>
-                    <div class="caption">
-                        <h3>Sed Etiam</h3>
-                        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions">
-                            <li><span class="button small">Details</span></li>
-                        </ul>
-                    </div>
-                </article>
-                <article>
-                    <a href="images/gallery/fulls/11.jpg" class="image">
-                        <img src="images/gallery/thumbs/11.jpg" alt="" />
-                    </a>
-                    <div class="caption">
-                        <h3>Magna Lorem</h3>
-                        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions">
-                            <li><span class="button small">Details</span></li>
-                        </ul>
-                    </div>
-                </article>
-                <article>
-                    <a href="images/gallery/fulls/12.jpg" class="image">
-                        <img src="images/gallery/thumbs/12.jpg" alt="" />
-                    </a>
-                    <div class="caption">
-                        <h3>Ipsum Dolor</h3>
-                        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions">
-                            <li><span class="button small">Details</span></li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </article>
             </div>
-
     </section>
